package ui;

public interface IGeneralUI {
    public void Print(String message);
    public void Println(String message);
}
