package util;

public abstract class Aggregator {
    public abstract Iterator iterator();
}
