package util;

public abstract class Iterator {
    public abstract boolean hasNext();
    public abstract Object next();
}
